# data-centric-platform

./: .gitignore  .readthedocs.yaml  LICENSE  LOGGING.md  README.md  al_framework.py  environment_dcp.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: Readme.md
docs/source/: conf.py  dcp_client.gui.rst  dcp_client.rst  dcp_client.utils.rst  dcp_client_installation.rst  dcp_server.rst  dcp_server.utils.rst  dcp_server_installation.rst  index.rst
notebooks/: client.ipynb
scripts/: 01_launch_vm.sh  03_launch_xpra.sh  03_startapp_client.sh  03_startapp_server.sh  launch_vm.sh  setup_vm.sh
scripts/bentoml/: 03_server.sh  server.sh
scripts/openstack/: 01_launch_vm_jsc.sh  02_setup_vm.sh
scripts/vnc/: client.sh  server.sh
src/active_learning_platform/: client.py
src/active_learning_platform/server/: custom_runner.py  local_inference.py  service.py
src/client/: MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  run_client.py  run_client.spec  setup.py
src/client/dcp_client/: __init__.py  app.py  bento_mlclient.py  bentoml_model.py  config.cfg  config.yaml  config_remote.cfg  config_remote.yaml  fsimagestorage.py  main.py  main.spec  main_window.py  mlclient.py  napari_window.py  run_client.spec  settings.py  sync_src_dst.py  utils.py  welcome_window.py
src/client/dcp_client/gui/: _custom_qt_helpers.py  _filesystem_wig.py  _my_widget.py  feature_extraction_window.py  main_window.py  napari_window.py  sam_controller.py  sam_preprocessing.py  sam_worker.py  utils.py  welcome_window.py
src/client/dcp_client/utils/: bentoml_model.py  compute4mask.py  featureextration.py  fsimagestorage.py  logger.py  sam_model_manager.py  settings.py  sync_src_dst.py  utils.py
src/client/dcp_client/utils/ai_assistance/: __init__.py  sam_controller.py  sam_preprocessing.py  sam_worker.py
src/client/test/: conftest.py  test_app.py  test_compute4mask.py  test_fsimagestorage.py  test_main_window.py  test_mywidget.py  test_napari_window.py  test_sync_src_dst.py  test_utils.py  test_welcome_window.py
src/data_centric_platform/: client.py
src/data_centric_platform/client/: main_window.py  napari_window.py  welcome_window.py
src/server/: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  environment_dcp.yml  pyproject.toml  requirements.txt
src/server/dcp_server/: __init__.py  bentofile.yaml  bentomlrunners.py  config.cfg  config.yaml  config_instance.cfg  config_instance.yaml  config_semantic.cfg  config_semantic.yaml  fsimagestorage.py  main.py  models.py  segmentationclasses.py  service.py  serviceclasses.py  settings.py  test.py  test_config.cfg  test_integration.py  utils.py
src/server/dcp_server/models/: __init__.py  cellpose_patchCNN.py  classifiers.py  custom_cellpose.py  inst_to_multi_seg.py  model.py  multicellpose.py  unet.py
src/server/dcp_server/utils/: fsimagestorage.py  helpers.py  logger.py  processing.py
src/server/test/: synthetic_dataset.py  test.py  test_config.cfg  test_integration.py  test_models.py  test_utils.py
src/server/test/configs/: test_config_CustomCellpose.yaml  test_config_Inst2MultiSeg_PatchClassifier.yaml  test_config_Inst2MultiSeg_RF.yaml  test_config_MultiCellpose.yaml  test_config_RF.cfg  test_config_RF.yaml  test_config_UNet.yaml  test_config_fcnn.cfg  test_config_fcnn.yaml
