[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['dcp']

[tool.setuptools.dynamic]
dependencies = {file = ["src/server/requirements.txt", "src/client/requirements.txt"]}

[project]
name = "data-centric-platform"
version = "0.1"
requires-python = ">=3.9"
description = ""
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
dynamic = ["dependencies"]
authors = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-muenchen.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-muenchen.de"},
  {name="Mariia Koren", email="mariia.koren@helmholtz-muenchen.de"},
  {name="Marie Piraud", email="marie.piraud@helmholtz-muenchen.de"},
]
maintainers = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-muenchen.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-muenchen.de"}
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
repository = "https://github.com/HelmholtzAI-Consultants-Munich/data-centric-platform"
documentation = "https://readthedocs.org/projects/data-centric-platform"
