[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['dcp_client']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "data-centric-platform-client"
version = "0.1"
requires-python = ">=3.9"
description = "The client of the data centric platform for microscopy image segmentation"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
dynamic = ["dependencies"]
authors = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-munich.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-munich.de"},
  {name="Mariia Koren", email="mariia.koren@helmholtz-munich.de"},
  {name="Marie Piraud", email="marie.piraud@helmholtz-munich.de"},
]
maintainers = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-munich.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-munich.de"}
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
repository = "https://github.com/HelmholtzAI-Consultants-Munich/data-centric-platform"
documentation = "https://readthedocs.org/projects/data-centric-platform"

[project.scripts]
dcp-client = "dcp_client.main:main"
