[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
#version = {attr = "my_package.VERSION"}
readme = {file = "README.md"}
dependencies = {file = ["requirements.txt"]}

[project]
name = "Data-centric-tool-server"
version = "0.1"
dynamic = ["dependencies"]
authors = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-muenchen.de"}
]
maintainers = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-muenchen.de"}
]
description = ""
keywords = []
readme = "README.md"
requires-python = "==3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
