[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['dcp_server']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "data-centric-tool-server"
version = "0.1"
requires-python = ">=3.9"
description = ""
# license = {file = "LICENSE.txt"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
dynamic = ["dependencies"]
authors = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-muenchen.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-muenchen.de"},
  {name="Mariia Koren", email="mariia.koren@helmholtz-muenchen.de"},
  {name="Marie Piraud", email="marie.piraud@helmholtz-muenchen.de"},
]
maintainers = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-muenchen.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-muenchen.de"}
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
repository = "https://github.com/HelmholtzAI-Consultants-Munich/data-centric-platform"
# homepage = "https://example.com"
documentation = "https://readthedocs.org/projects/data-centric-platform"

[project.scripts]
dcp-server = "dcp_server.main:main"
