[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['dcp_server']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "data-centric-platform-server"
version = "0.2.0"
requires-python = ">=3.9, <3.12"
description = "The server of the data centric platform for microscopy image segmentation"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
dynamic = ["dependencies"]
authors = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-munich.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-munich.de"},
  {name="Mariia Koren", email="mariia.koren@helmholtz-munich.de"},
  {name="Marie Piraud", email="marie.piraud@helmholtz-munich.de"},
]
maintainers = [
  {name="Christina Bukas", email="christina.bukas@helmholtz-munich.de"},
  {name="Helena Pelin", email="helena.pelin@helmholtz-munich.de"}
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "sphinx",
  "sphinx-rtd-theme"
]

[project.urls]
repository = "https://github.com/HelmholtzAI-Consultants-Munich/data-centric-platform"
# homepage = "https://example.com"
documentation = "https://readthedocs.org/projects/data-centric-platform"

[project.scripts]
dcp-server = "dcp_server.main:main"
